--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -121,7 +121,7 @@
             </div>
         </header>
 
-        <div class="nav-scroller py-1 mb-2">
+        <div class="nav-scroller p-y-1 mb-2">
             <nav class="nav d-flex justify-content-between">
                 {% links_menu urls %}
                 {% featured_post_list urls %}
