--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -76,6 +76,8 @@
     <link rel="stylesheet" href="{% static 'vendor/node_modules/bootstrap-icons/font/bootstrap-icons.css' %}">
     <script src="{% static 'vendor/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
 
+    <script src="{% static 'vendor/node_modules/jquery/dist/jquery.slim.min.js' %}"></script>
+
     {% block rel %}
         <!-- base! favicon -->
         <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
