--- a/shortener/templates/shortener/links_list.html
+++ b/shortener/templates/shortener/links_list.html
@@ -1,5 +1,5 @@
 {% for url in urls %}
     {% if url.featured %}
-        <a class="py-2 pe-2 link-muted" href="{{ url.get_absolute_url }}">{{ url.title }}</a>
+        <a class="p-2 link-muted" href="{{ url.get_absolute_url }}">{{ url.title }}</a>
     {% endif %}
 {% endfor %}
