--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -105,7 +105,7 @@
     <!-- End Google Tag Manager (noscript) -->
 {% endif %}
 
-<div class="container-fluid mx-2">
+<div class="container-fluid">
 
     <div class="container-fluid">
         <header class="blog-header py-2">
