link primary back

--- a/khoBlog/static/css/main.css
+++ b/khoBlog/static/css/main.css
@@ -11356,6 +11356,15 @@ fieldset:disabled .btn {
   text-decoration: none;
 }
 
+.link-primary {
+  color: #a59fee !important;
+}
+
+.link-primary:hover {
+  text-decoration: none;
+  color: #7872d4 !important;
+}
+
 .card-body .todo-completed,
 .todo .todo-completed {
   text-decoration: line-through;
