portfolio repo flatpages descs

--- a/portfolio/templates/portfolio/project_detail.html
+++ b/portfolio/templates/portfolio/project_detail.html
@@ -20,15 +20,18 @@
         {% if project.website or project.technology %}
             <div class="card-footer border-secondary">
                 {% if project.website %}
-                    <p class="card-text">Website: <a href="{{ project.website.url }}">{{ project.website }}</a></p>
+                    <p class="card-text">Website: <a target="_blank" href="{{ project.website.url }}">{{ project.website }}</a></p>
                 {% endif %}
                 {% if project.technology %}
                     <div class="card-text">
                         Made with:
-                        <a href="{{ project.technology.website }}">{{ project.technology }}</a>
+                        <a target="_blank" href="{{ project.technology.website }}">{{ project.technology }}</a>
                         <br />
                         <span>{{ project.technology.description }}</span>
                     </div>
+                {% endif %}
+                {% if project.repository %}
+                    <p class="card-text">Repository: <a target="_blank" href="{{ project.repository.url }}">{{ project.repository }}</a></p>
                 {% endif %}
             </div>
         {% endif %}
