--- a/khoBlog/templates/flatpages/default.html
+++ b/khoBlog/templates/flatpages/default.html
@@ -9,17 +9,17 @@
 
     <!-- Primary Meta Tags -->
     <meta name="title" content="{{ title }}">
-    <meta name="description" content="A Page on Khodok's Blog">
+    <meta name="description" content="{{ flatpage.description }}">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:url" content="{{ flatpage.get_absolute_url }}">
     <meta property="og:title" content="{{ title }}">
-    <meta property="og:description" content="A Page on Khodok's Blog">
+    <meta property="og:description" content="{{ flatpage.description }}">
 
     <!-- Twitter -->
     <meta property="twitter:url" content="{{ flatpage.get_absolute_url }}">
     <meta property="twitter:title" content="{{ title }}">
-    <meta property="twitter:description" content="A Page on Khodok's Blog">
+    <meta property="twitter:description" content="{{ flatpage.description }}">
 {% endblock page_head %}
 
 {% block title %}
