--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -51,8 +51,9 @@
             <div class="card-footer border-secondary">
                 <div class="btn-group-vertical d-flex col-12 col-lg-5 p-0" role="group" aria-label="Comments Group">
                     <a href="{{ post.get_absolute_url }}" class="btn btn-primary">Continue Reading</a>
-                    <button type="button" class="btn btn-secondary" data-toggle="modal"
-                        data-target="#postModal-{{ post.id }}">Post Info
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-secondary" data-bs-toggle="modal"
+                        data-bs-target="#postModal-{{ post.id }}">Post Info
                     </button>
                 </div>
             </div>
