--- a/khoBlog/static/css/_variables.scss
+++ b/khoBlog/static/css/_variables.scss
@@ -12,5 +12,8 @@ $palette_dark: #212121;
 $link-color: $palette_light;
 $link-hover-color: $palette_attenuation;
 
+$link-decoration: none;
+$link-hover-decoration: underline;
+
 $font-family-sans-serif: Roboto !default;
 $font-family-base: $font-family-sans-serif !default;
