--- a/khoBlog/static/css/Themes/highlight.css
+++ b/khoBlog/static/css/Themes/highlight.css
@@ -410,5 +410,4 @@
   margin-left: 0px;
 }
 
-/* Literal.Number.Integer.Long */
-/*# sourceMappingURL=highlight.css.map */
+/* Literal.Number.Integer.Long *//*# sourceMappingURL=highlight.css.map */
