--- a/polls/static/polls/style.css
+++ b/polls/static/polls/style.css
@@ -4,5 +4,4 @@ li a {
 
 body {
   background: white url("img/background.gif") no-repeat;
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
